# Trabalho-PROG

./: .project  README.md
cross_words/: CMakeLists.txt  board.cpp  board.h  compiling_error.txt  cwcreator.cpp  dictionary.cpp  dictionary.h
crosswords/cwcreator/: CMakeLists.txt  board.cpp  board.h  cwcreator.cpp  dictionary.cpp  dictionary.h
crosswords/cwplayer/: CMakeLists.txt  board.cpp  board.h  cwcreator.cpp  dictionary.cpp  dictionary.h  player.cpp  player.h
playwords/: .project
playwords/src/: main.cpp
procdic/src/: anexoa.txt  compiling_error.txt  headlines.cpp  headlines.h  main.cpp  small_dictionary.txt  word_list.txt
